--- a/templates/about.html
+++ b/templates/about.html
@@ -99,7 +99,7 @@
                 <tr>
                   <td>NIM</td>
                   <td>:</td>
-                  <td>5210411177</td>
+                  <td>5210411382</td>
                 </tr>
                 <tr>
                   <td>Prodi</td>
@@ -114,7 +114,7 @@
                 <tr>
                   <td>Email</td>
                   <td>:</td>
-                  <td>bimagaris28@gmail.com</td>
+                  <td>hlmhdrali24@gmail.com</td>
                 </tr>
               </table>
 
