--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@
 	background-color: #8070e8 !important;
 }
 
+.display-4{
+	font-weight: 100;
+}
+
 .navbar-brand,
 .nav-link {
 	color: #fff !important;
@@ -42,7 +46,7 @@
 }
 
 .jumbotron {
-	background-color: #DFE9AC !important;
+	background-color: #fff !important;
 }
 
 .button-nav-link {
