--- a/templates/about.html
+++ b/templates/about.html
@@ -127,9 +127,11 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-dark text-white" style="padding: 20px 0; margin-top: 150px">
-    <div class="container">
-      <small>&copy; 2023 (Sistem Prediksi Penyakit Liver)</small>
+  <div class="container-footer-about text-white mt-5">
+    <div  style="padding: 20px 0; margin-top: 370px">
+      <div class="container">
+        <small>&copy; 2023 (Sistem Prediksi Penyakit Liver)</small>
+      </div>
     </div>
   </div>
 
