--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 
   <div class="jumbotron" style="background-color: #DFE9AC;">
     <div class="container">
-      <h1 class="display-4">Selamat Datang!</h1>
+      <h1 class="fw-bold h1" >Selamat Datang!</h1>
       <p class="lead">Ayo Cek Kesehatan Livermu disini!</p>
       <hr class="my-4">
       <p>Sepele adalah sebuah aplikasi untuk memprediksi penyakit liver berdasarkan data-data kandungan darah.</p>
@@ -86,11 +86,13 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-dark text-white mt-5" style="padding: 20px 0;">
+  <div class="container-footer-about text-white mt-5">
+  <div class=" text-white mt-5" style="padding: 20px 0;">
     <div class="container">
       <small>&copy; 2023 Sepele (Sistem Prediksi Penyakit Liver)</small>
     </div>
   </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
