--- a/templates/predict.html
+++ b/templates/predict.html
@@ -162,11 +162,13 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-dark text-white mt-5" style="padding: 20px 0;">
+  <div class="container-footer-about text-white mt-5">
+  <div class=" text-white mt-5" style="padding: 20px 0; margin-top : 100px">
     <div class="container">
       <small>&copy; 2023 (Sistem Prediksi Penyakit Liver)</small>
     </div>
   </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
